[bugfix] use flatfield from iris_pipeline

--- a/201901_stpipe_iris_pipeline/flat_field.cfg
+++ b/201901_stpipe_iris_pipeline/flat_field.cfg
@@ -1,6 +1,6 @@
 
 name = "flat_field" 
-class = "jwst.flatfield.FlatFieldStep"
+class = "iris_pipeline.flatfield.FlatFieldStep"
 
 # Optional filename suffix for output flats (only for MOS data).
 flat_suffix = None
