--- a/201905_iris_pipeline_0.1_calibration_sims/image2_iris.cfg
+++ b/201905_iris_pipeline_0.1_calibration_sims/image2_iris.cfg
@@ -7,6 +7,7 @@ save_results = True
       [[bkg_subtract]]
       [[assign_wcs]]
         skip = True
+      [[dark_current]]
       [[flat_field]]
         config_file = flat_field.cfg
       [[photom]]
